--- a/pom.xml
+++ b/pom.xml
@@ -138,43 +138,17 @@
       <version>${undertow.version}</version>
     </dependency>
 
-<!--    <dependency>-->
-<!--      <groupId>io.undertow</groupId>-->
-<!--      <artifactId>undertow-websockets-jsr</artifactId>-->
-<!--      <version>${undertow.version}</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>io.undertow</groupId>
+      <artifactId>undertow-websockets-jsr</artifactId>
+      <version>${undertow.version}</version>
+    </dependency>
 
     <!--Vaadin -->
     <dependency>
       <groupId>com.vaadin</groupId>
       <artifactId>vaadin</artifactId>
     </dependency>
-
-
-
-
-    <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>vaadin-lumo-theme</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>flow-client</artifactId>
-      <version>1.4.3</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>vaadin-button-flow</artifactId>
-      <version>1.3.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.webjars.bowergithub.vaadin</groupId>
-      <artifactId>vaadin-button</artifactId>
-
-    </dependency>
-
 
     <!--Logging-->
     <dependency>
