--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.rapidpm</groupId>
     <artifactId>rapidpm-dependencies</artifactId>
-    <version>04.00.16-RPM</version>
+    <version>04.00.17-RPM</version>
   </parent>
 
 
@@ -85,7 +85,7 @@
     <maven.compiler.target>8</maven.compiler.target>
 
     <!--external-->
-    <vaadin.version>13.0.4</vaadin.version>
+    <vaadin.version>13.0.7</vaadin.version>
     <undertow.version>2.0.20.Final</undertow.version>
 
     <!--logging-->
@@ -161,7 +161,7 @@
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
-                    <Main-Class>org.rapidpm.vaadin.nano.CoreUIService</Main-Class>
+                    <Main-Class>org.rapidpm.vaadin.nano.CoreUIKotlinService</Main-Class>
                   </manifestEntries>
                 </transformer>
               </transformers>
