--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,13 @@
       <artifactId>vaadin</artifactId>
     </dependency>
 
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+    </dependency>
+
     <!--Logging-->
     <dependency>
       <groupId>org.slf4j</groupId>
