--- a/pom.xml
+++ b/pom.xml
@@ -262,7 +262,7 @@
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
-                    <Main-Class>org.rapidpm.vaadin.nano.CoreUIKotlinService</Main-Class>
+                    <Main-Class>demo.HelloWorld</Main-Class>
                   </manifestEntries>
                 </transformer>
               </transformers>
